Adding Mqtt client